2017-02-03         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awkgram.y (set_profile_text): Improve code clarity by using emalloc
	to allocate the string instead of abusing estrdup.

2017-02-02         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (set_profile_next): Allocate an extra byte at the
	end for the NUL in case we add a sign. Thanks to Andrew Schorr
	for making me look at this code.

	And later in the same day:

	* awkgram.y (set_profile_next): Undo previous change, since estrdup
	handles it, but updated the comments.

2017-02-01         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (mbc_char_count): Remove spurious multiplies by
	gawk_mb_cur_max. Thanks to Andrew Schorr for making me look
	at this code.

	Unrelated:

	* awkgram.y (make_profile_number): Renamed to ...
	(set_profile_next): New function. All calls adjusted. Also improved
	use at MPFR number case.

2017-01-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* interpret.h [UNFIELD]: Fix condition for assignment from
	value with valref == 1. Fixes problems introduced at gawk 4.1.2.

2017-01-27         Arnold D. Robbins     <arnold@skeeve.com>

	* interpret.h: Update copyright year.
	* debug.c (do_run): Rework error message to ease translation.
	Thanks to Rafael Fontenelle <rafaelff@gnome.org> and to
	Eli Zaretskii <eliz@gnu.org>.

2017-01-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awk.h (enum block_id): Remove BLOCK_INVALID, since it serves no
	useful purpose and seems to slow things down a bit.
	* node.c (nextfree): Remove first invalid entry.

2017-01-25         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awk.h (BLOCK): Remove typedef. BLOCK was used for 2 different
	purposes: to contain a block allocation list header, and to hold
	each individual allocated item. This was confusing, because the "size"
	field was set only in the header, but not in each element.