@@ -1,3 +1,9 @@
+2017-02-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (typeof5): New test.
+	* typeof5.awk, typeof5.in, typeof5.ok: New files.
+	Thanks to Andrew Schorr for part of the tests.
+
 2017-01-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* Makefile.am (gensub3): New test.
