@@ -1,3 +1,8 @@
+2017-02-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* builtin.c (do_typeof): Handle arguments that have
+	the NULL_FIELD flag set.
+
 2017-02-03         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* awkgram.y (set_profile_text): Improve code clarity by using emalloc
